# popoplot

./: Cargo.toml  README.md
src/: main.rs  terminal_plotter.rs  text_plotter.rs
src/snapshots/: popoplot__terminal_plotter__tests__worker_test.snap  popoplot__text_plotter__tests__text_plotter_test.snap
