[package]
name = "popoplot"
version = "0.2.0"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["visualization", "plotting", "drawing"]
repository = "https://github.com/alepez/popoplot"
readme = "README.md"
categories = ["visualization"]

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5" }
tokio-util = { version = "0.6", features = ["codec"] }
