[package]
name = "popoplot"
version = "0.4.0"
authors = ["Alessandro Pezzato <alessandro.pezzato@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["visualization", "plotting", "drawing"]
repository = "https://github.com/alepez/popoplot"
homepage = "https://github.com/alepez/popoplot"
readme = "README.md"
categories = ["visualization"]
description = "A tool to visualize real time numerical data as a line chart"
documentation = "https://github.com/alepez/popoplot"
exclude = [
    ".gitignore",
]

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5" }
tokio-util = { version = "0.6", features = ["codec"] }
structopt = "0.3.21"
plotters = { version = "0.3.0" }